--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "socket.io": "^4.8.1",
